# remindctl-mcp

./: Cargo.toml  PLAN.md  README.md
scripts/: install-macos-service.sh  uninstall-macos-service.sh
skill/remindctl-mcp/: SKILL.md
src/: config.rs  error.rs  main.rs  models.rs  remindctl.rs  resolve.rs  server.rs
