[package]
name = "remindctl-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = "0.8.8"
regex = "1.12.3"
rmcp = { version = "0.15.0", features = ["server", "transport-streamable-http-server", "macros"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process", "time", "signal"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
